DPPB-634: General update
