# apigee/openApi/openapi3_0.yaml
@@ -1800,7 +1800,7 @@ paths:
             text/xml:
               schema:
                 $ref: #/components/schemas/DfT.DTRO.Models.SharedResponse.GuidResponse
-  /dtroUsers/{ids}:
+  /dtroUsers/redundant:
     delete:
       tags:
         - DtroUsers
@@ -1810,11 +1810,6 @@ paths:
         - oAuth:
             - cso
       parameters:
-        - name: ids
-          in: path
-          required: true
-          schema: 
-            type: string
         - name: X-Correlation-ID
           in: header
           required: true
@@ -1822,6 +1817,13 @@ paths:
             type: string
             description: UUID formatted string to track the request through the enquiries stack.
             default: 41ae0471-d7de-4737-907f-cab2f0089796
+      requestBody:
+        required: true
+        content:
+          ids:
+            schema:
+              type: string
+              description: The OAuth 2.0 grant type.
       responses:
         '200':
           description: OK
